--- a/package.json
+++ b/package.json
@@ -10,36 +10,38 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
-    "babel-preset-env": "^1.7.0",
+    "@react-navigation/bottom-tabs": "6.0.9",
+    "@react-navigation/native": "6.0.6",
+    "@react-navigation/native-stack": "6.2.5",
+    "babel-preset-env": "1.7.0",
+    "date-fns": "2.28.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.1",
-    "react-native-vector-icons": "^9.0.0"
+    "react-native-calendars": "1.1274.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "3.10.1",
+    "react-native-vector-icons": "9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.66.4",
-    "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.2",
+    "@babel/core": "7.12.9",
+    "@babel/preset-env": "7.16.5",
+    "@babel/runtime": "7.12.5",
+    "@react-native-community/eslint-config": "2.0.0",
+    "@types/jest": "26.0.23",
+    "@types/react-native": "0.66.4",
+    "@types/react-test-renderer": "17.0.1",
+    "@typescript-eslint/eslint-plugin": "5.8.0",
+    "@typescript-eslint/parser": "5.7.0",
+    "babel-jest": "26.6.3",
+    "eslint": "7.14.0",
+    "jest": "26.6.3",
+    "metro-react-native-babel-preset": "0.66.2",
     "prettier": "2.5.1",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.4"
+    "typescript": "4.4.4"
   },
   "resolutions": {
-    "@types/react": "^17"
+    "@types/react": "17"
   },
   "jest": {
     "preset": "react-native",
