--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,18 @@ buck-out/
 
 # Bundle artifact
 *.jsbundle
+*.apk
+*.aab
+*.dSYM.*
+*.ipa
 
 # CocoaPods
 /ios/Pods/
+
+# secrets
+secret/*
+*.secret
+
+# archieves
+*.zip
+*.rar
