--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "tsc && eslint . --max-warnings 0"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "6.0.9",
@@ -29,16 +29,25 @@
     "@react-native-community/eslint-config": "2.0.0",
     "@types/jest": "26.0.23",
     "@types/react-native": "0.66.4",
+    "@types/react-native-vector-icons": "6.4.10",
     "@types/react-test-renderer": "17.0.1",
     "@typescript-eslint/eslint-plugin": "5.8.0",
     "@typescript-eslint/parser": "5.7.0",
     "babel-jest": "26.6.3",
-    "eslint": "7.14.0",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.66.2",
     "prettier": "2.5.1",
     "react-test-renderer": "17.0.2",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+    "eslint": "8.4.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-i18n": "2.1.0",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-jest": "25.2.2",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-react-hooks": "4.2.1-alpha-f6abf4b40-20211020",
+    "eslint-plugin-unused-imports": "1.1.5"
   },
   "resolutions": {
     "@types/react": "17"
