--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@react-navigation/bottom-tabs": "6.0.9",
     "@react-navigation/native": "6.0.6",
     "@react-navigation/native-stack": "6.2.5",
-    "babel-preset-env": "1.7.0",
     "date-fns": "2.28.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
@@ -34,11 +33,7 @@
     "@typescript-eslint/eslint-plugin": "5.8.0",
     "@typescript-eslint/parser": "5.7.0",
     "babel-jest": "26.6.3",
-    "jest": "26.6.3",
-    "metro-react-native-babel-preset": "0.66.2",
-    "prettier": "2.5.1",
-    "react-test-renderer": "17.0.2",
-    "typescript": "4.4.4",
+    "babel-preset-env": "1.7.0",
     "eslint": "8.4.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-i18n": "2.1.0",
@@ -46,8 +41,13 @@
     "eslint-plugin-jest": "25.2.2",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.2.1-alpha-f6abf4b40-20211020",
-    "eslint-plugin-unused-imports": "1.1.5"
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-unused-imports": "1.1.5",
+    "jest": "26.6.3",
+    "metro-react-native-babel-preset": "0.66.2",
+    "prettier": "2.5.1",
+    "react-test-renderer": "17.0.2",
+    "typescript": "4.4.4"
   },
   "resolutions": {
     "@types/react": "17"
