--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@react-navigation/native": "6.0.6",
     "@react-navigation/native-stack": "6.2.5",
     "date-fns": "2.28.0",
+    "mobx": "6.3.10",
+    "mobx-react": "7.2.1",
+    "mobx-react-lite": "3.2.3",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-calendars": "1.1274.0",
@@ -41,7 +44,7 @@
     "eslint-plugin-jest": "25.2.2",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-unused-imports": "1.1.5",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.66.2",
