--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mobx": "6.3.10",
     "mobx-react": "7.2.1",
     "mobx-react-lite": "3.2.3",
+    "nanoid": "3.1.30",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-calendars": "1.1274.0",
