--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "tsc && eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.15.14",
     "@react-navigation/bottom-tabs": "6.0.9",
     "@react-navigation/native": "6.0.6",
     "@react-navigation/native-stack": "6.2.5",
@@ -17,10 +18,11 @@
     "mobx": "6.3.10",
     "mobx-react": "7.2.1",
     "mobx-react-lite": "3.2.3",
-    "nanoid": "3.1.30",
+    "mobx-sync": "3.0.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-calendars": "1.1274.0",
+    "react-native-paper": "4.11.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.10.1",
     "react-native-vector-icons": "9.0.0"
