--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.15.14",
     "@react-navigation/bottom-tabs": "6.0.9",
-    "@react-navigation/native": "6.0.6",
+    "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "6.2.5",
     "date-fns": "2.28.0",
     "mobx": "6.3.10",
-    "mobx-react": "7.2.1",
     "mobx-react-lite": "3.2.3",
     "mobx-sync": "3.0.0",
     "react": "17.0.2",
-    "react-native": "0.66.4",
+    "react-native": "0.67.1",
     "react-native-calendars": "1.1274.0",
+    "react-native-dropdown-picker": "5.3.0",
+    "react-native-localization": "2.1.7",
+    "react-native-localize": "^2.2.0",
     "react-native-paper": "4.11.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.10.1",
