--- a/package.json
+++ b/package.json
@@ -10,52 +10,52 @@
     "lint": "tsc && eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.15.14",
-    "@react-navigation/bottom-tabs": "6.0.9",
+    "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.8",
-    "@react-navigation/native-stack": "6.2.5",
-    "date-fns": "2.28.0",
-    "mobx": "6.3.10",
-    "mobx-react-lite": "3.2.3",
-    "mobx-sync": "3.0.0",
-    "react": "17.0.2",
-    "react-native": "0.67.1",
-    "react-native-calendars": "1.1274.0",
-    "react-native-dropdown-picker": "5.3.0",
-    "react-native-localization": "2.1.7",
+    "@react-navigation/native-stack": "^6.2.5",
+    "date-fns": "^2.28.0",
+    "mobx": "^6.3.10",
+    "mobx-react-lite": "^3.2.3",
+    "mobx-sync": "^3.0.0",
+    "react": "^17.0.2",
+    "react-native": "^0.67.1",
+    "react-native-calendars": "^1.1274.0",
+    "react-native-dropdown-picker": "^5.3.0",
+    "react-native-localization": "^2.1.7",
     "react-native-localize": "^2.2.0",
-    "react-native-paper": "4.11.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "3.10.1",
-    "react-native-vector-icons": "9.0.0"
+    "react-native-paper": "^4.11.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.1",
+    "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.12.9",
-    "@babel/preset-env": "7.16.5",
-    "@babel/runtime": "7.12.5",
-    "@react-native-community/eslint-config": "2.0.0",
-    "@types/jest": "26.0.23",
-    "@types/react-native": "0.66.4",
-    "@types/react-native-vector-icons": "6.4.10",
-    "@types/react-test-renderer": "17.0.1",
-    "@typescript-eslint/eslint-plugin": "5.8.0",
-    "@typescript-eslint/parser": "5.7.0",
-    "babel-jest": "26.6.3",
-    "babel-preset-env": "1.7.0",
-    "eslint": "8.4.1",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-i18n": "2.1.0",
-    "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jest": "25.2.2",
-    "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.3.0",
-    "eslint-plugin-unused-imports": "1.1.5",
-    "jest": "26.6.3",
-    "metro-react-native-babel-preset": "0.66.2",
-    "prettier": "2.5.1",
-    "react-test-renderer": "17.0.2",
-    "typescript": "4.4.4"
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@types/jest": "^26.0.23",
+    "@types/react-native": "^0.66.4",
+    "@types/react-native-vector-icons": "^6.4.10",
+    "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "babel-jest": "^26.6.3",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-i18n": "^2.1.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^25.2.2",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-unused-imports": "^1.1.5",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.66.2",
+    "prettier": "^2.5.1",
+    "react-test-renderer": "^17.0.2",
+    "typescript": "^4.4.4"
   },
   "resolutions": {
     "@types/react": "17"
