--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
     /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
     "module": "commonjs",
     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
-    "lib": [
-      "es2017"
-    ],
+
+    // this is the lowest supported standard library
+    "lib": ["es2015"],
     /* Specify library files to be included in the compilation. */
     "useDefineForClassFields": true,
     "allowJs": true,
