--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-vector-icons": "^9.0.0",
+    "react-navigation": "^4.4.4",
     "ts-toolbelt": "^9.6.0"
   },
   "devDependencies": {
@@ -36,9 +37,11 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/": "react-navigation/native",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.4",
     "@types/react-native-vector-icons": "^6.4.10",
+    "@types/react-query": "^1.2.9",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.7.0",
