--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.2.5",
-    "@shopify/react-native-skia": "^0.1.128",
     "date-fns": "^2.28.0",
+    "glob": "7.2.0",
+    "lottie-ios": "3.4.0",
+    "lottie-react-native": "^5.1.4",
     "mobx": "^6.3.10",
     "mobx-react-lite": "^3.2.3",
     "mobx-sync": "^3.0.0",
@@ -63,7 +65,8 @@
     "typescript": "^4.4.4"
   },
   "resolutions": {
-    "@types/react": "17"
+    "@types/react": "17",
+    "glob": "^7.2.0"
   },
   "jest": {
     "preset": "react-native",
