--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.2.5",
-    "@shopify/react-native-skia": "^0.1.128",
     "date-fns": "^2.28.0",
+    "lottie-ios": "3.4.0",
+    "lottie-react-native": "^5.1.4",
     "mobx": "^6.3.10",
     "mobx-react-lite": "^3.2.3",
     "mobx-sync": "^3.0.0",
     "react": "^17.0.2",
     "react-native": "^0.67.1",
     "react-native-calendars": "^1.1274.0",
-    "react-native-dropdown-picker": "^5.3.0",
     "react-native-localization": "^2.1.7",
     "react-native-localize": "^2.2.0",
     "react-native-paper": "^4.11.1",
